--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,5 +9,8 @@
     <h1> welcom to limon website </h1>
     <h2> look mama ,i can push github</h2>
     <p> its not mama , its your amma</p>
+
+
+    <button> click me</button>
 </body>
 </html>
