--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-fast-website</title>
+
 </head>
 <body>
-    
+    <style>
+.bag{
+    background-color: blue;
+    color: yellow;
+    width: 200px;
+}
+li a{
+    background-color: aquamarine;
+    text-decoration: none;
+    border: 2px solid red;  }
+
+
+    </style>
     <h1> welcom to limon website </h1>
     <h2> look mama ,i can push github</h2>
     <p> its not mama , its your amma</p>
+    <p class="bag"> bag mama halum halum </p>
+    <header>
+
+        <ul>
+            <li>
+              <a href="https://www.youtube.com/watch?v=ra_ZLr5jLhU"> yousuf</a>
+            </li>
+        </ul>
+    </header>
 
 
     <button> click me</button>
